css/style.css
/* ... */
header .nav-menu-box ul.navigation-menu-list > li.active > a span:before {
  width: 0;
}
header .nav-menu-box ul.navigation-menu-list > li.active > a span:after {
  margin-left: 0;
  left: -20px;
}

ul.sub-menu {
  display: none;
  padding: 0 10px;
  margin: 0;
  border-top: 1px solid #868686;
}
ul.sub-menu li {
  display: block;
  background-color: #6b6b6b;
  border-top: 1px solid #868686 !important;
}
ul.sub-menu li:first-child {
  border-top: none !important;
}
ul.sub-menu li a {
  padding: 12px 18px;
  display: block;
  color: #ffffff;
  font-size: 14px;
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
}
ul.sub-menu li a:hover {
  color: #d92828;
}

/**
 * Allows you to use retina images at various pixel densities.
 * Examples:
 *
 *   @include retina(/images/mypic.jpg, 2);
 *   @include retina(/images/mypic.jpg, 3, 100px 100px, left top no-repeat transparent);
 *
 * @param  {Value}  $path               The path to the file name minus extension.
 * @param  {Number} $cap:    2          The highest pixel density level images exist for.
 * @param  {Value}  $size:   auto auto  The intended width of the rendered image.
 * @param  {Value}  $extras: null       Any other `background` values to be added.
 */
/*-------------------------------------------------- */
/* 1. Isotope filtering */
/*------------------------------------------------- */
.isotope-item {
  z-index: 2;
}

.isotope-hidden.isotope-item {
  pointer-events: none;
  z-index: 1;
}

.isotope, .isotope .isotope-item {
  -webkit-transition-duration: 0.8s;
  -moz-transition-duration: 0.8s;
  transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
  -moz-transition-property: height, width;
  transition-property: height, width;
}

.isotope .isotope-item {
  -webkit-transition-property: -webkit-transform, opacity;
  -moz-transition-property: -moz-transform, opacity;
  transition-property: transform, opacity;
}

/*-----------------------------------------------------------------------------
 *
 *KENBURNER RESPONSIVE BASIC STYLES OF HTML DOCUMENT
 *
 *Screen Stylesheet
 *
 *version:    1.0
 *date:       07/27/11
 *author:     themepunch
 *email:      support@themepunch.com
 *website:    http://www.themepunch.com */
/*----------------------------------------------------------------------------- */
.boxedcontainer {
  max-width: 1170px;
  margin: auto;
  padding: 0px 30px;
}

/*********************************************
 *    -   SETTINGS FOR BANNER CONTAINERS  -
 ********************************************* */
.tp-banner-container {
  width: 100%;
  position: relative;
  padding: 0;
}

.tp-banner {
  width: 100%;
  position: relative;
}

.tp-banner-fullscreen-container {
  width: 100%;
  position: relative;
  padding: 0;
}

.slotholder:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
}

/*------------------------------------------------- */
/* =  General */
/*------------------------------------------------- */
.ip-header {
  position: fixed;
  top: 0;
  z-index: 99999;
  min-height: 480px;
  width: 100%;
  height: 100%;
  background: #242424;
}

.ip-header h1 {
  margin: 0;
}

.ip-logo,
.ip-loader {
  position: absolute;
  left: 0;
  width: 100%;
  opacity: 0;
  cursor: default;
  pointer-events: none;
}

.ip-logo {
  top: 0;
  height: 100%;
  transform: translate3d(0, 25%, 0);
  text-align: center;
}

.ip-logo img {
  max-width: 250px;
}

.ip-loader {
  bottom: 20%;
}

.ip-header .ip-inner {
  display: block;
  margin: 0 auto;
}

.ip-header .ip-loader svg {
  fill: #242424;
}

.ip-header .ip-loader svg path.ip-loader-circlebg {
  stroke: #333333 !important;
  stroke-width: 5px;
}

.ip-header .ip-loader svg path.ip-loader-circle {
  transition: stroke-dashoffset 0.2s;
  stroke: #d92828;
  stroke-width: 2px;
}

.loading .ip-logo,
.loading .ip-loader {
  opacity: 1;
  animation: animInitialHeader 1s cubic-bezier(0.7, 0, 0.3, 1) both;
}

.loading .ip-loader {
  animation-delay: 0.2s;
}

@keyframes animInitialHeader {
  from {
    opacity: 0;
    transform: translate3d(0, 800px, 0);
  }
}
.loaded .ip-logo,
.loaded .ip-loader {
  opacity: 1;
}

.loaded .ip-logo {
  transform-origin: 50% 0;
  animation: animLoadedLogo 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
}

@keyframes animLoadedLogo {
  to {
    transform: translate3d(0, 100%, 0) translate3d(0, 50px, 0) scale3d(0.65, 0.65, 1);
  }
}
.loaded .ip-logo {
  animation: animLoadedLoader 0.5s cubic-bezier(0.7, 0, 0.3, 1) forwards;
}

.loaded .ip-loader {
  animation: animLoadedLoader 0.5s cubic-bezier(0.7, 0, 0.3, 1) forwards;
}

@keyframes animLoadedLoader {
  to {
    opacity: 0;
    transform: translate3d(0, -100%, 0) scale3d(0.3, 0.3, 1);
  }
}
.loaded .ip-header {
  animation: animLoadedHeader 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
}

@keyframes animLoadedHeader {
  to {
    transform: translate3d(0, -100%, 0);
  }
}
/* Content animations */
.loaded .ip-main h2,
.loaded .ip-main .browser,
.loaded .ip-main .browser .box,
.loaded .codrops-demos {
  animation: animLoadedContent 1s cubic-bezier(0.7, 0, 0.3, 1) both;
}

.loaded .ip-main .browser,
.loaded .ip-main .browser .box:first-child {
  animation-delay: 0.1s;
}

.loaded .ip-main .browser .box:nth-child(2) {
  animation-delay: 0.15s;
}

.loaded .ip-main .browser .box:nth-child(3) {
  animation-delay: 0.2s;
}

@keyframes animLoadedContent {
  from {
    opacity: 0;
    transform: translate3d(0, 200px, 0);
  }
}
.layout-switch .ip-header {
  position: absolute;
}

.no-js .ip-header {
  position: relative;
  min-height: 0px;
}

.no-js .ip-header .ip-logo {
  margin-top: 20px;
  height: 180px;
  opacity: 1;
  transform: none;
}

.cursor {
  position: fixed;
  left: 0;
  top: 0;
  pointer-events: none;
}

.cursor--small {
  width: 5px;
  height: 5px;
  left: -2.5px;
  top: -2.5px;
  border-radius: 50%;
  z-index: 11000;
  background: #ffffff;
}
/* ... */

